css/styles.css
html { /* full page (for trail */
    margin: 0;
    height: 100%;
}

/* BODY */
body {
    background-color: rgb(0, 0, 0);
    font-family: 'Lexend', sans-serif;
    color: rgb(219, 219, 219); /* Not pure white; — makes it easier to read */
    text-align: center;
    max-width: 70%;
    margin: 0 auto;
    min-height: 100%; /* full page (for trail */

    /* no selecting */
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    /* auto line break; taken from stack overflow */
    word-wrap: break-word;      /* IE 5.5-7 */
    white-space: -moz-pre-wrap; /* Firefox 1.0-2.0 */
    white-space: pre-wrap;      /* current browsers */

}


/* ASCII ART (the one at the top of the page)*/
.asciiart {
    background-image: linear-gradient(to left, rgb(91, 206, 250), rgb(245, 169, 184), rgb(255, 255, 255), rgb(245, 169, 184), rgb(91, 206, 250)); /* Transgender Colour Scheme :3 */
    -webkit-background-clip: text;
    -moz-background-clip: text;
    background-clip: text;
    color: transparent;
}

/* TEXT */
a { /* links */
    color: rgb(255, 0, 76); /* I LOVE AMARANTH! */
    transition: text-shadow 0.15s ease-in-out; 
    font-weight: bold;
}
a:hover { /* link hover */
    text-shadow: 0 0 5px rgb(255, 0, 76);  /* pretty :3 */
}
a.orange {
    color: rgb(255, 171, 115);
    transition: text-shadow 0.15s ease-in-out; 
    font-weight: bold;
}
a.orange:hover {
    text-shadow: 0 0 5px rgb(255, 171, 115);
}
a.blue {
    color: rgb(115, 199, 255);
    transition: text-shadow 0.15s ease-in-out; 
    font-weight: bold;
}
a.blue:hover {
    text-shadow: 0 0 5px rgb(115, 199, 255);
}
a.green {
    color: rgb(115, 255, 157);
    transition: text-shadow 0.15s ease-in-out; 
    font-weight: bold;
}
a.green:hover {
    text-shadow: 0 0 5px rgb(115, 255, 157);
}
a.white {
    color: rgb(228, 228, 228);
    transition: text-shadow 0.15s ease-in-out; 
    font-weight: bold;
}
a.white:hover {
    text-shadow: 0 0 5px rgb(228, 228, 228);
}
.monospace {
    font-family: 'Courier New', Courier, monospace;
    background-color: #070707;
    color: #e0e0e0;
    padding: 0.1em 0.3em;
    border-radius: 6px;
    display: inline-block;
    border: 1px solid #222;
}
mark { /* marks cus they r pretty (like you, dear reader :3) */
    background-color: rgb(255, 160, 200);
}
mark.blue { /* marks cus they r pretty (like you, dear reader :3) */
    background-color: rgb(160, 217, 255);
}

/* IMAGES */
img {
  width: 15%;
  transition: transform 0.3s ease; 
}
img:hover { /* pretty hover */
    transform: scale(1.1) rotate(2deg);
}
img.large {
    width: 25%;
}
.img88x31 img {
  width: 88px;
  height: 31px;
  max-width: none;
}

